# win

./: LICENSE  README.md  pyproject.toml
examples/: demo.txt
spec/: WIN-CORE.md  WIN-PACKET.md  win-proof.schema.json
src/winstack_protocol/: cli.py  core.py
tests/: test_all.py
