[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "winstack-protocol"
version = "0.3.0"
description = "AFP protocol reference implementation: deterministic artifact fingerprints + portable proof packets."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Wise.Est Systems"}]
keywords = ["integrity", "hash", "verification", "proof", "protocol", "deterministic"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.scripts]
winstack = "winstack_protocol.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
